# Microphysics

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .ignore  .slurm-mgp  CITATION  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.exa  DISCLAIMER  Dockerfile  Make.Microphysics  Make.Microphysics_extern  Makefile.am  README.md  configure  configure_mfix  git.exa.HEAD  git.exa.out  main.cpp  runtests.cmake
Tools/: AMReX.cmake  AMReXConfig.cmake  CMakeLists.txt  MFIXTools.cmake  MFIX_CMakeVariables.cmake  MFIX_Compilers.cmake  MFIX_Config.cmake  MFIX_ConfigSuperbuild.cmake  MFIX_Options.cmake  MFIX_Superbuild.cmake  MFIX_Typecheck.cmake  MFIX_Utils.cmake
Tools/CMake/: MFIX_CMakeVariables.cmake  MFIX_Config.cmake  MFIX_Options.cmake  MFIX_Superbuild.cmake  MFIX_Tags.cmake  MFIX_Typecheck.cmake  MFIX_Utils.cmake
Tools/F90/: CMakeLists.txt  fcompare_par.f90  fextract.f90  fjoin_par.f90  plt_compare_diff_grids.f90
benchmarks/: CMakeLists.txt  README.md  make_reports.sh
benchmarks/01-HCS/: README.md  avg_step.sh  par-gen.f90
benchmarks/03-fluidbed/: avg_step.sh  cori_script
benchmarks/05-cyl-fluidbed/: notes.txt
benchmarks/05-cyl-riser/: dup.f90
benchmarks/DEM01/: runtests.sh  write_usr0.f  write_usr0.f90  write_usr1.f  write_usr1.f90
benchmarks/DEM02/: runtests.sh  write_usr0.f  write_usr0.f90
benchmarks/DEM03/: runtests.sh  write_usr0.f
benchmarks/DEM04/: runtests.sh  write_usr0.f  write_usr0.f90
benchmarks/FLD01/: usr3.f  usr3.f90
benchmarks/FLD01-x/: runtests-dmp.sh  runtests.sh  usr3.f90
benchmarks/FLD01-y/: inputs  runtests.sh  usr3.f90
benchmarks/FLD01-z/: runtests-dmp.sh  usr3.f90
benchmarks/umf/: usr1.f90
src/: CMakeLists.txt  MFIXParticleContainer.H  MFIXParticleContainer.cpp  MFIXParticleContainer.cpp.print  MFIXParticleContainerUtils.cpp  Make.package  ParticleContainer.H  ParticleContainer.cpp  adjust_a_g.f90  adjust_dt_mod.f90  adjust_leq.f90  amrex_to_mfix.F90  bc_mod.f90  boxlib_to_mfix.F90  calc_cell.f90  calc_coeff.f90  calc_d.f90  calc_mflux.f90  calc_mu_g.f90  calc_outflow.f90  calc_ro_g.f90  calc_tau.f90  calc_trd_g.f90  check_bc_flow.f90  check_bqend.f90  check_convergence.f90  check_domain.f90  check_plane.f90  compute_diveu.cpp  compute_divu.f90  compute_dt.cpp  compute_levelset.f90  compute_normals.f90  compute_vort.f90  constant_mod.f90  conv_dif_u_g.f90  conv_dif_v_g.f90  conv_dif_w_g.f90  conv_pp_g.f90  conv_rop.f90  (+98 more)
src/check_data/: CMakeLists.txt  Make.package  check_axis.f90  check_bc_dem.f90  check_bc_flow.f90  check_bc_geometry.f90  check_bc_inflow.f90  check_bc_outflow.f90  check_bc_walls.f90  check_boundary_conditions.f90  check_collision_model.f90  check_domain.f90  check_gas_phase.f90  check_gas_properties.f90  check_geometry_prereqs.f90  check_ic_common_discrete.f90  check_initial_conditions.f90  check_inputs.f90  check_numerics.f90  check_output_control.f90  check_particle_properties.f90  check_point_sources.f90  check_run_control.f90  check_solids_common_all.f90  check_solids_common_discrete.f90  check_solids_dem.f90  check_solids_model_prereqs.f90  check_solids_phases.f90
src/convection/: CMakeLists.txt  MacProjection.H  MacProjection.cpp  Make.package  convection_eb_mod.f90  convection_mod.f90  macproj_mod.f90  mfix_MAC_projection.cpp  mfix_compute_MAC_projected_velocities.cpp  mfix_compute_MAC_velocities.cpp  mfix_compute_convective_term.cpp  mfix_compute_fluxes.cpp  mfix_compute_fluxes_gpu.cpp  mfix_compute_forces.cpp  mfix_compute_ugradu.cpp  mfix_convection.cpp  mfix_correct_small_cells.cpp  mfix_divop_conv.cpp  mfix_divop_conv.hpp  mfix_flux_redistribute.cpp  mfix_mac_F.H  mfix_mac_projection.cpp  mfix_merge_redistribute.cpp  mfix_predict_vels_on_faces.cpp  mfix_predict_vels_on_faces_gpu.cpp  mfix_redistribute.cpp  mfix_set_mac_velocity_bcs.cpp  mfix_set_mac_velocity_bcs.hpp  mfix_slopes.cpp  mfix_slopes_gpu.cpp  mfix_state_redistribute.cpp  mfix_upwind.H  redistribution.H  set_mac_velocity_bcs.f90  slopes_mod.f90
src/deposition/: CMakeLists.txt  MFIX_PC_Deposition.cpp  MFIX_PC_Trilinear.cpp  MFIX_PC_TrueDPVM.cpp  Make.package  mfix_deposition_K.H  mfix_deposition_bcs.cpp  mfix_deposition_bcs_gpu.cpp  mfix_deposition_op.H  mfix_deposition_op.cpp  mfix_diffuse_array.cpp  mfix_diffuse_drag.cpp  mfix_diffuse_eps.cpp  mfix_diffuse_scalar.cpp  mfix_pc_deposition.cpp  mfix_redistribute_deposition.cpp  mfix_redistribute_deposition_gpu.cpp  mfix_redistribute_solids_volume.cpp
src/deprecated/: sum_particle_props.f90
src/des/: CMakeLists.txt  MFIXParticleContainer.H  MFIXParticleContainer.cpp  MFIX_PC_Init.cpp  MFIX_PC_InitCollisionParams.cpp  MFIX_PC_RemoveOutOfRange.cpp  MFIX_PC_Replicate.cpp  Make.package  calc_collision_wall_mod.f90  calc_drag.f90  calc_drag_des.f90  calc_force_dem.f90  calc_grad_des.f90  calc_interp_weights.f90  calc_particle_collisions.f90  calc_pg_grad.f90  calc_volume_fraction.f90  calc_wall_collisions.f90  cffctowall.f90  cfnewvalues.f90  cfrelvel.f90  cfslide.f90  comp_mean_fields.f90  construct_gradp.f90  des_bc_mod.f90  des_conv_coeff_K.H  des_drag_K.H  des_init_namelist.f90  des_time_march.f90  desmpi_mod.f90  discretelement_mod.f90  drag_gp_des.f90  drag_gs_des.f90  drag_mod.f90  flip_particle_vol.f90  gas_drag.f90  get_collision_coefficients.f90  init_collision.f90  make_arrays_des.f90  (+45 more)
src/include/: 1  (+16 more)
src_cc/: CMakeLists.txt  Make.package  amrex_to_mfix.F90  calc_cell.f90  calc_mu_g.f90  compute_diveu.cpp  compute_dt.cpp  compute_vort.f90  fill_bc0.f90  get_data.f90  init_fluid.f90  init_namelist.f90  main.cpp  mfix.H  mfix.cpp  mfix_F.H  mfix_advance.cpp  mfix_arrays.cpp  mfix_drag.cpp  mfix_evolve.cpp  mfix_init.cpp  mfix_level.H  mfix_level.cpp  mfix_regrid.cpp  set_bc0.f90  set_bc_flow.f90  set_bc_type.f90  set_epg.f90  set_p0.f90  set_ps.f90  set_velocity_bcs.f90  zero_wall_norm_vel.f90
src_staggered/: CMakeLists.txt  Make.package  compute_divu.f90  main.cpp  mfix.H  mfix.cpp  mfix_F.H  mfix_evolve.cpp  mfix_regrid.cpp  set_velocity_bcs.f90
tests/: '  CMakeLists.txt  DEM06_Results1  DEM06_Results2  README.md
tools/: CMakeLists.txt  MFIX-tests.ini
(+2484 files in other folders)
